--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:80"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
